restructure image directory and update week 6 newsletter

--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -23,7 +23,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x Pathlight Coding Clubs Logo" /></span><span class="title">MSU x Pathlight Coding Clubs</span>
+									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
 								</a>
 
 							<!-- Nav -->
@@ -75,7 +75,6 @@
 									</p>
 									<p>
 										By now, you've made it through all of the new content we'll be covering in our seven-week program! You've made it through the basic commands, through loops and functions, and now through variables, inputs, and parameters. These are major foundations of all programming and we're so proud of the progress you've made! Keep up the amazing work.
-
 									</p>
 									<p>
 										Before we dive into a full recap of our last few meetings, we've got a few announcements.
@@ -100,7 +99,7 @@
 										</p>
 										<h4>3. Looking Ahead</h4>
 										<p>
-											Remember that <b>we meet every Saturday from 10-11:30a BZT and Tuesday from 4-5:30p BZT, through 26 February!</b> This week, we'll be working on final projects!
+											Remember that <b>we meet every Saturday from 10-11:30a BZT and Tuesday from 4-5:30p BZT, through 26 February!</b> That means this Saturday, 26 February, will be our final meeting. On Saturday, we'll be sharing final projects and celebrating your hard work!
 										</p>
 										</p>
 										<h4>4. GWC Summer Programs</h4>
@@ -115,7 +114,7 @@
 												</li>
 											</ul>
 											<br>
-											Girls Who Code is a US-based nonprofit which aims to close the gender gap in technology, and sponsors our sister club, <a href="https://www.spartangwc.org/">Spartan Girls Who Code</a>. 
+											If you are interested in applying, note that the general application is due on <b>Friday, March 18th</b>. Notifications of admission will be sent in mid-April. As a reminder, we do not run these summer programs&mdash;they are run independently by Girls Who Code, a US-based nonprofit which aims to close the gender gap in technology. GWC sponsors our sister club, <a href="https://www.spartangwc.org/">Spartan Girls Who Code</a>!
 										</p>
 										<h4>5. Questions?</h4>
 										<p>
@@ -127,37 +126,57 @@
 									<!-- meeting recap -->
 									<h4 class="text-center">Meeting Recap</h4>
 									<p>
-										Last week we had the honor of welcoming our spotlight, <b>Dr. Jaime Awe</b>! Jaime received his Ph.D. in Archaeology from the University of London, England. He served as the first Director of the Belize Institute of Archaeology from 2003 to 2014, and is currently a Professor in the Anthropology Department of Northern Arizona University. He was recently the recipient of a Field Discovery Award from the Chinese Academy of Social Sciences, the Society for American Archaeology 2022 Award for Excellence in Latin American and Caribbean Archaeology, and Belize person of the year in 2019. Dr. Awe continue his active program of research at several of the major sites in western Belize.
+										Last week we had the honor of welcoming <b>Dr. Jaime Awe</b> as our spotlight! Jaime received his Ph.D. in Archaeology from the University of London, England. He served as the first Director of the Belize Institute of Archaeology from 2003 to 2014, and is currently a Professor in the Anthropology Department of Northern Arizona University. He was recently the recipient of a Field Discovery Award from the Chinese Academy of Social Sciences, the Society for American Archaeology 2022 Award for Excellence in Latin American and Caribbean Archaeology, and Belize person of the year in 2019. Dr. Awe continues to work on his active program of research at several of the major sites in western Belize.
 									</p>
 									<p>
-										You can learn more about Dr. Jaime Awe's and his work on his <a href="https://directory.nau.edu/person/jja259">academic homepage</a> and <a href="https://en.wikipedia.org/wiki/Jaime_Awe">wikipedia</a>.  Thank you for joining us, Dr.Awe!
+										You can learn more about Dr. Jaime Awe and his work on his <a href="https://directory.nau.edu/person/jja259">academic homepage</a> and on <a href="https://en.wikipedia.org/wiki/Jaime_Awe">Wikipedia</a>.  Thank you for joining us and sharing your love for Archaeology, Dr. Awe!
 									</p>
-									<span class="image main"><img src="images/news/dr.awe.png" alt="Photo Dr.Awe Live Spotlight!"></span>
-									<p>
-										It is Final Project Week! We are so excited to see the unique projects; students should be very proud of themselves!
-									</p>					
+									<span class="image main"><img src="images/news_5/dr.awe.png" alt="Photo Dr.Awe Live Spotlight!"></span>
 									<div align="middle" class="col-md-12">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1101.png" width=90%>
+												<img class="shadow-lg" src="images/news_5/dr.awe.1.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1102.png" width=90%>
+												<img class="shadow-lg" src="images/news_5/dr.awe.2.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1103.png" width=90%>
+												<img class="shadow-lg" src="images/news_5/dr.awe.3.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1104.png" width=90%>
+												<img class="shadow-lg" src="images/news_5/dr.awe.4.png" width=90%>
 											</div>
 										</div>
 										<br>
 									</div>
 									<p>
-										Above are a few key slides on our Final Project brainstorm as we continue our last Final Project workday! Woot woot!
+										In other news, it's Final Project Week! We are so excited to see the unique projects each student created; students should be very proud of themselves. Next week, we'll feature the final projects each student created in our newsletter!
+									</p>					
+									<div align="middle" class="col-md-12">
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1101.png" width=90%>
+											</div>
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1102.png" width=90%>
+											</div>
+										</div>
+										<br>
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1103.png" width=90%>
+											</div>
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1104.png" width=90%>
+											</div>
+										</div>
+										<br>
+									</div>
+									<p>
+										Above are a few key slides from our Final Project brainstorm as we prepare to present final projects Saturday. Woot woot!
 									</p>
 
 									<!-- spotlight -->
@@ -219,7 +238,7 @@
 							
 									<!-- closure -->
 									<p>
-										Stay strong this week, coders! We're almost there!
+										Finish strong, coders!
 										<br>
 										-The MSU x Pathlight Belize Team
 									</p>
@@ -237,7 +256,6 @@
 									</p>
 									<p>
 										By now, you've made it through all of the new content we'll be covering in our seven-week program! You've made it through the basic commands, through loops and functions, and now through variables, inputs, and parameters. These are major foundations of all programming and we're so proud of the progress you've made! Keep up the amazing work.
-
 									</p>
 									<p>
 										Before we dive into a full recap of our last few meetings, we've got a few announcements.
@@ -294,7 +312,7 @@
 									<p>
 										You can learn more about Oceana's work on their <a href="https://belize.oceana.org/">website</a>. Thank you for joining us, Jacinta!
 									</p>
-									<span class="image main"><img src="images/news_4news/2022-02-08 (3).png" alt="Photo Jacinta Gomez Live Spotlight!"></span>
+									<span class="image main"><img src="images/news_4/2022-02-08 (3).png" alt="Photo Jacinta Gomez Live Spotlight!"></span>
 									<p>
 										One of our icebreakers from last week encouraged students to make their own <b>Digital Audio from Art</b> using tools built on machine learning. Kudos to the students for their creativity!
 									</p>
@@ -308,19 +326,19 @@
 									<div align="middle" class="col-md-12">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/icebreaker101.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/icebreaker101.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/icebreaker102.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/icebreaker102.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/icebreaker103.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/icebreaker103.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/icebreaker104.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/icebreaker104.png" width=90%>
 											</div>
 										</div>
 										<br>
@@ -331,55 +349,55 @@
 									<div align="middle" class="col-md-12">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1001.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1001.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1002.png" width=90%>
-											</div>
-										</div>
-										<br>
-										<div class="row">
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1003.png" width=90%>
-											</div>
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1004.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1002.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1005.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1003.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1006.png" width=90%>
-											</div>
-										</div>
-										<br>
-										<div class="row">
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1007.png" width=90%>
-											</div>
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1008.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1004.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1009.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1005.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1010.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1006.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1011.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1007.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1012.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1008.png" width=90%>
+											</div>
+										</div>
+										<br>
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1009.png" width=90%>
+											</div>
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1010.png" width=90%>
+											</div>
+										</div>
+										<br>
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1011.png" width=90%>
+											</div>
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_4/1012.png" width=90%>
 											</div>
 										</div>
 										<br>
@@ -391,19 +409,19 @@
 									<div align="middle" class="col-md-12">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1101.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1101.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1102.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1102.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1103.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1103.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_4news/1104.png" width=90%>
+												<img class="shadow-lg" src="images/news_4/1104.png" width=90%>
 											</div>
 										</div>
 										<br>
