--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -99,8 +99,12 @@
 									<li style="list-style: disc;">
 										<a href="https://docs.google.com/presentation/d/1Ib30p3xIVexk4kKeBImDdXgiBCjGofnU1fuxZcQKm4g/edit?usp=sharing" target="_blank">13 - Final Project Day 2 - 2.22.22</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1jt6DIhiklG4YXmVXsUokCXPfkXjsmZ3Jlp2q-sW8AU0/edit?usp=sharing" target="_blank">14 - Final Celebration- 2.26.22</a>
+									</li>
 								</ul>
 							</section>
+							
 
 							<section>
 								<h2>CodeHS</h2>
