--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -398,7 +398,7 @@
 									<p>
 										Finish strong, coders!
 										<br>
-										-The MSU x Pathlight Belize Team
+										<b>-The MSU x Pathlight Belize Team</b>
 									</p>
 								</div>
 							</section>
@@ -651,7 +651,7 @@
 									<p>
 										Stay strong this week, coders! We're almost there!
 										<br>
-										-The MSU x Pathlight Belize Team
+										<b>-The MSU x Pathlight Belize Team</b>
 									</p>
 								</div>
 							</section>
@@ -929,7 +929,7 @@
 									<p>
 										Stay strong this week, coders! We're almost there!
 										<br>
-										-The MSU x Pathlight Belize Team
+										<b>-The MSU x Pathlight Belize Team</b>
 									</p>
 								</div>
 							</section>
@@ -1168,7 +1168,7 @@
 									<p>
 										Stay strong this week, coders!
 										<br>
-										-The MSU x Pathlight Belize Team
+										<b>-The MSU x Pathlight Belize Team</b>
 									</p>
 								</div>
 							</section>
@@ -1407,7 +1407,7 @@
 									<p>
 										Stay strong this week, coders!
 										<br>
-										-The MSU x Pathlight Belize Team
+										<b>-The MSU x Pathlight Belize Team</b>
 									</p>
 								</div>
 							</section>
