gwc week 7 newsletter

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -170,7 +170,276 @@
                 </section>
         <!-- end news section -->
 
-        <section id="week5" class="news bg-white">
+        <section id="week7" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            
+                            <h2 class="section-title">Week 7</h2> <!-- begin week 7 summary -->
+                            <h4 class="section-title">Starting our Final Project!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were so excited to see all of your students’ enthusiasm as we wrapped up Week 7 of our Spring 
+                    2022 Spartan Girls Who Code Program! This week, we reviewed everything we have learned so far and
+                    started brainstorming for our final projects!
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. No Meeting these next two Saturdays</h4>
+                    <p>
+                        We will not be meeting this Saturday (3/26), or next Saturday (4/2), due to Lansing Community Schools' spring break.
+                        Our next meeting will be <b>4/9</b>.
+                    </p>
+                    <h4>2. Bonus Hour</h4>
+                    <p>
+                        This week's Bonus Hour will take place Thursday, <b>3/24</b> from 7:00-8:00p ET and is open to all 
+                        SGWC participants. SGWC mentors will be available on Zoom during the bonus hour to resolve 
+                        technical difficulties, dive deeper into the coding concepts we've learned, or talk about 
+                        computer science in general! There will not be a Bonus Hour on 3/31.
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour will always be the same as the password from the
+                        previous Saturday's meeting (sent via email only).
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/92450527619">https://msu.zoom.us/j/92450527619</a> (password is same as the one for your Cohort Zoom)</li>
+                    </ul>
+                    <h4>3. Girls Who Code T-Shirts</h4>
+                    <p>
+                        We are planning on ordering Girls Who Code T-shirts for all of our students! Keep an eye out for an order form 
+                        in your emails. Please have them filled out by Friday, 3/25 so that we are able to order the shirts in time! Note: The 
+                        T-Shirts are adult sizes. 
+                    </p>
+                    <h4>4. Feedback</h4>
+                    <p>
+                        Us mentors are paying attention! This past week, we have left feedback for each one of our students. 
+                        If you would like to see it, you can find that in CodeHS under one of your assignments! 
+                        The assignment button will be colored pink or dark blue. 
+                    </p>
+                    <h4>5. The Joy of Coding</h4>
+                    <p>
+                        Electrical and Computer Engineering at the University of Michigan is offering an online course that high school 
+                        students can participate in this summer. It is called <a href="https://joyofcoding.eecs.umich.edu/">The Joy Of Coding</a> 
+                        and takes place June 22, 2022 - August 3, 2022. 
+                    </p>
+                    <p>
+                       The Joy of Coding online course has been specially created for anyone who wants to experience first-hand the power 
+                       and thrill of coding computers to do amazing things. Created with high school students in mind, it is a great way 
+                       for anyone to step into the wondrous world of coding. You’ll learn by doing and experience how coding powers apps 
+                       such as Snapchat and TikTok. 
+                    </p>
+                    <p>
+                        The cost of the program is $99 plus tax per student. Need-based financial aid is available. 
+                        For more information, visit: <a href="https://joyofcoding.eecs.umich.edu/">https://joyofcoding.eecs.umich.edu/</a>
+                    </p>
+                    <h4>6. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                        <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                        Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                        Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                        or recommendations!
+                    </p>
+                    <h4>7. Looking Ahead</h4>
+                    <p>
+                        We'll see you again on Saturday, <b>4/9 at 10a ET</b> for our eighth SGWC meeting of the spring, where we will be reviewing all that we’ve learned so far!
+                    </p>
+                    <h4>8. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    To start off this week, we provided information about joining our club on Girls Who Code HQ and getting Girls Who Code T-shirts!
+                </p>
+                <p>
+                    Next, we jumped right into an introduction to our final projects, and provided some websites with different layouts so they 
+                    could see what kind of website that they wanted to make.
+                </p>
+                <p>
+                    Our students had some awesome ideas for their websites! 
+                </p>
+                <ul>
+                    <li>A Website with Dogs for Adoption</li>
+                    <li>A Website about their favorite Bands, Games, and Music</li>
+                    <li>A Book Website</li>
+                    <li>A Vacation Guide</li>
+                    <li>A Website about Dolphins</li>
+                    <li>And so many more amazing ideas!</li>
+                </ul>
+                <p>
+                    After that, our students continued working on their exercises in <a href="https://codehs.com/">CodeHS</a> and brainstorm ideas for their final projects. 
+                </p>
+                <p>
+                    We ended things with small mentor-student group discussions, reflecting on what went well, what was challenging, and what students
+                    are looking forward to at next Saturday's session. Responses to our weekly feedback survey were again quite positive, but don't 
+                    hesitate to reach out to info@spartangwc.org if you have any questions or concerns!
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    Continuing our mentor spotlight series, we are highlighting our Yellow Cohort Mentors this week!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/emilyMcNichol750x1000r72.jpeg" height="350">
+                            <br><br>
+                            <p><i>Emily McNichol</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/connorMears750x1000r72.jpeg" height="350">
+                            <br><br>
+                            <p><i>Connor Mears</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/jasmine750x1000r72.jpeg" height="350">
+                            <br><br>
+                            <p><i>Jasmine Richardson</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/TylerGyulveszi.jpg" height="350">
+                            <br><br>
+                            <p><i>Tyler Gyulveszi</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-3" align="middle"> <!-- Emily -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a first-year majoring in Computational Data Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I first became interested in computer science when I saw my friend 
+                                remotely turn on a projector using code on a web page. 
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                The coolest thing I have done with code is visually represent correlations 
+                                between the data of traits of grapevines.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope I can one day code a portfolio webpage for myself!
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Make coding personalized to your own interests, there’s so much you can apply code to! 
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="middle"> <!-- Connor -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a fourth-year majoring in Computer Science with a Media & Information cognate!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I first got interested in computer science because I loved playing video games and 
+                                wanted to learn more about how they were made.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I made a website for my old pizza place I worked at when I was younger to 
+                                help customers find the menu and store hours easier.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope to continue using my passion for coding to help inspire others to try it out, 
+                                with Girls Who Code and other outreach programs!
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Explore what you are curious about and interested in, and don't be afraid to ask for help!
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="middle"> <!-- Jasmine -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a third-year majoring in Computer Science with a minor in Information Technology!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                Ever since I took my first coding class in my first year of university and I fell in love with it.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I was able to code an entire card game of Solitaire and created an android app used to centralize different class websites.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I want to be able to create my own game apps or work in a big tech company in product development.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Keep going even if you are lost and keep expanding your knowledge do not keep yourself in a box. 
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="middle"> <!-- Tyler -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a fourth-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I was always fascinated about the inner workings of technology and wanted 
+                                to be a part of driving the future of technological advancement.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I've worked on developing some games with friends and large groups, which 
+                                is a ton of fun to collaborate with others and see from other people's perspectives! 
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I would love to be a Software Engineer at a FANG Company that eventually starts 
+                                working with more hardware components or AI. 
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Sometimes this field can be really demanding, but as long as you keep trying it will work out in the end! 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Enjoy the break and we look forward to seeing everyone again on Saturday, 4/9! :)
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+                </div>
+            </section> <!-- end week 7 summary -->
+
+        <section id="week6" class="news bg-white">
             <div class="container">
                 <div class="headline text-center">
                     <div class="row">
