--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -593,7 +593,7 @@
                             </p>
                             <p>
                                 <b>What are you hoping to do with computer science in the future?</b><br>
-                                In the future, I'm hoping to help make people's lives better with the power of coding
+                                In the future, I'm hoping to help make people's lives better with the power of coding.
                             </p>
                             <p>
                                 <b>What advice do you have for our students?</b><br>
